novi commit da mogu skinit petrino

--- a/app/src/main/res/layout/fragment_success.xml
+++ b/app/src/main/res/layout/fragment_success.xml
@@ -13,7 +13,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:fontFamily="@font/san_francisco"
-        android:text="blaaa"
+        android:textStyle="bold"
+        android:text="Success"
         android:textColor="@color/blue"
         android:layout_marginTop="50dp"
         android:textSize="30dp"
