--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -53,7 +53,9 @@
             android:layout_gravity="center_horizontal"
             android:layout_marginTop="30dp"
             android:textSize="18sp"
-            android:text="Login" />
+            android:fontFamily="@font/san_francisco"
+            android:text="Login"
+            android:textStyle="bold"/>
         <Button
             android:id="@+id/registration"
             android:layout_width="250dp"
@@ -63,6 +65,8 @@
             android:background="@android:color/transparent"
             android:textColor="@color/colorPrimary"
             android:textSize="15sp"
+            android:fontFamily="@font/san_francisco"
+            android:textStyle="bold"
             android:text="Register me" />
         <Button
             android:id="@+id/forgotpassword"
@@ -73,6 +77,8 @@
             android:background="@android:color/transparent"
             android:textColor="@color/colorPrimary"
             android:textSize="12sp"
-            android:text="I forgot my password" />
+            android:text="I forgot my password"
+            android:fontFamily="@font/san_francisco"
+            android:textStyle="bold"/>
     </LinearLayout>
 </RelativeLayout>
