--- a/app/src/main/res/layout/fragment_my_information.xml
+++ b/app/src/main/res/layout/fragment_my_information.xml
@@ -15,6 +15,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="30dp"
         android:fontFamily="@font/san_francisco"
+        android:textStyle="bold"
         android:text="User Information"
         android:textAllCaps="true"
         android:textColor="@color/blue"
