--- a/app/src/main/res/layout/fragment_home_screen.xml
+++ b/app/src/main/res/layout/fragment_home_screen.xml
@@ -29,7 +29,7 @@
     <Button
         android:id="@+id/dateOfArrival"
         style="@style/Widget.AppCompat.Button.Borderless.Colored"
-        android:layout_width="300dp"
+        android:layout_width="290dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="91dp"
         android:background="@drawable/date_button"
@@ -44,7 +44,7 @@
     <Button
         android:id="@+id/dateOfDeparture"
         style="@style/Widget.AppCompat.Button.Borderless.Colored"
-        android:layout_width="300dp"
+        android:layout_width="290dp"
         android:layout_height="wrap_content"
         android:background="@drawable/date_button"
         android:textColor="#000000"
@@ -118,8 +118,9 @@
 
     <ImageButton
         android:id="@+id/profile"
-        android:layout_width="65dp"
-        android:layout_height="61dp"
+        android:layout_width="53dp"
+        android:layout_height="53dp"
+        android:layout_margin="5dp"
         android:layout_marginBottom="138dp"
         android:background="@color/white"
         android:clickable="true"
