--- a/app/src/main/res/layout/fragment_my_reservations.xml
+++ b/app/src/main/res/layout/fragment_my_reservations.xml
@@ -13,6 +13,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:fontFamily="@font/san_francisco"
+        android:textAllCaps="true"
+        android:textStyle="bold"
         android:text="My Reservations"
         android:textColor="@color/blue"
         android:textSize="30dp"
