--- a/app/src/main/res/layout/fragment_home_screen.xml
+++ b/app/src/main/res/layout/fragment_home_screen.xml
@@ -15,10 +15,11 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
         android:fontFamily="@font/san_francisco"
-        android:text="SELECT DATE"
+        android:text="Select date"
+        android:textAllCaps="true"
         android:textStyle="bold"
-        android:textColor="#0B0000"
-        android:textSize="36sp"
+        android:textColor="@color/blue"
+        android:textSize="35sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.069"
@@ -29,61 +30,61 @@
     <Button
         android:id="@+id/dateOfArrival"
         style="@style/Widget.AppCompat.Button.Borderless.Colored"
-        android:layout_width="290dp"
+        android:layout_width="270dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="91dp"
         android:background="@drawable/date_button"
         android:textColor="#000000"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.855"
+        app:layout_constraintHorizontal_bias="0.773"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/chooseDate"
-        app:layout_constraintVertical_bias="0.019" />
+        app:layout_constraintVertical_bias="0.0" />
 
     <Button
         android:id="@+id/dateOfDeparture"
         style="@style/Widget.AppCompat.Button.Borderless.Colored"
-        android:layout_width="290dp"
+        android:layout_width="270dp"
         android:layout_height="wrap_content"
         android:background="@drawable/date_button"
         android:textColor="#000000"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.855"
+        app:layout_constraintHorizontal_bias="0.773"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/dateOfArrival"
-        app:layout_constraintVertical_bias="0.113" />
+        app:layout_constraintVertical_bias="0.101" />
 
     <TextView
         android:id="@+id/from"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:fontFamily="@font/san_francisco"
-        android:text="FROM"
+        android:text="From"
         android:textColor="#0B0909"
-        android:textSize="26sp"
+        android:textSize="24sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/dateOfArrival"
-        app:layout_constraintHorizontal_bias="0.425"
+        app:layout_constraintHorizontal_bias="0.372"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/chooseDate"
-        app:layout_constraintVertical_bias="0.175" />
+        app:layout_constraintVertical_bias="0.161" />
 
     <TextView
         android:id="@+id/to"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:fontFamily="@font/san_francisco"
-        android:text="TO"
+        android:text="To"
         android:textColor="#0B0909"
-        android:textSize="26sp"
+        android:textSize="24sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/dateOfDeparture"
-        app:layout_constraintHorizontal_bias="0.425"
+        app:layout_constraintHorizontal_bias="0.476"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/from"
-        app:layout_constraintVertical_bias="0.139" />
+        app:layout_constraintVertical_bias="0.124" />
 
     <Button
         android:id="@+id/ship"
@@ -92,7 +93,8 @@
         android:layout_marginBottom="256dp"
         android:background="@drawable/button_rectangle"
         android:fontFamily="@font/san_francisco"
-        android:text="SHIP"
+        android:text="Ship"
+        android:textAllCaps="true"
         android:textSize="22sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -107,7 +109,8 @@
         android:layout_marginBottom="8dp"
         android:background="@drawable/button_rectangle"
         android:fontFamily="@font/san_francisco"
-        android:text="AVAILABILITY"
+        android:text="Availability"
+        android:textAllCaps="true"
         android:textSize="24sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -118,9 +121,9 @@
 
     <ImageButton
         android:id="@+id/profile"
-        android:layout_width="53dp"
-        android:layout_height="53dp"
-        android:layout_margin="5dp"
+        android:layout_width="40dp"
+        android:layout_height="40dp"
+        android:layout_margin="20dp"
         android:layout_marginBottom="138dp"
         android:background="@color/white"
         android:clickable="true"
