--- a/app/src/main/res/layout/fragment_new_screen.xml
+++ b/app/src/main/res/layout/fragment_new_screen.xml
@@ -134,12 +134,16 @@
         android:layout_width="155dp"
         android:layout_height="55dp"
         android:layout_marginBottom="252dp"
-        android:background="@drawable/button_rectangle"
-        android:gravity="center"
+        android:topRightRadius="20dp"
+        android:topLeftRadius="20dp"
+        android:bottomLeftRadius="20dp"
+        android:bottomRightRadius="20dp"
+        android:background="@drawable/date_button"
         android:fontFamily="@font/san_francisco"
+        android:gravity="center"
         android:text="ship"
         android:textAllCaps="true"
-        android:textColor="@color/white"
+        android:textColor="@color/black"
         android:textSize="22sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
