--- a/app/src/main/res/navigation/root_navigation_graph.xml
+++ b/app/src/main/res/navigation/root_navigation_graph.xml
@@ -75,6 +75,10 @@
         <argument
             android:name="departureDate"
             app:argType="string"/>
+        <argument
+            android:name="shipSize"
+            app:argType="string"
+            app:nullable="true" />
     </fragment>
     <fragment
         android:id="@+id/addShipFragment"
@@ -92,6 +96,9 @@
             app:argType="string"/>
         <argument
             android:name="departureDate"
+            app:argType="string"/>
+        <argument
+            android:name="shipSize"
             app:argType="string"/>
     </fragment>
     <fragment
@@ -167,6 +174,9 @@
             app:argType="string"/>
         <argument
             android:name="departureDate"
+            app:argType="string"/>
+        <argument
+            android:name="shipSize"
             app:argType="string"/>
     </fragment>
 
