Dohvacanje podataka iz baze

--- a/app/src/main/res/layout/fragment_home_screen.xml
+++ b/app/src/main/res/layout/fragment_home_screen.xml
@@ -16,9 +16,9 @@
         android:layout_marginStart="8dp"
         android:fontFamily="@font/san_francisco"
         android:text="SELECT DATE"
-        android:textStyle="bold"
         android:textColor="#0B0000"
-        android:textSize="36sp"
+        android:textSize="29sp"
+        android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.069"
@@ -29,7 +29,7 @@
     <Button
         android:id="@+id/dateOfArrival"
         style="@style/Widget.AppCompat.Button.Borderless.Colored"
-        android:layout_width="300dp"
+        android:layout_width="260dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="91dp"
         android:background="@drawable/date_button"
@@ -44,7 +44,7 @@
     <Button
         android:id="@+id/dateOfDeparture"
         style="@style/Widget.AppCompat.Button.Borderless.Colored"
-        android:layout_width="300dp"
+        android:layout_width="260dp"
         android:layout_height="wrap_content"
         android:background="@drawable/date_button"
         android:textColor="#000000"
@@ -60,9 +60,9 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:fontFamily="@font/san_francisco"
-        android:text="FROM"
+        android:text="From"
         android:textColor="#0B0909"
-        android:textSize="26sp"
+        android:textSize="24sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/dateOfArrival"
         app:layout_constraintHorizontal_bias="0.425"
@@ -75,9 +75,9 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:fontFamily="@font/san_francisco"
-        android:text="TO"
+        android:text="To"
         android:textColor="#0B0909"
-        android:textSize="26sp"
+        android:textSize="24sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/dateOfDeparture"
         app:layout_constraintHorizontal_bias="0.425"
@@ -92,8 +92,8 @@
         android:layout_marginBottom="256dp"
         android:background="@drawable/button_rectangle"
         android:fontFamily="@font/san_francisco"
-        android:text="SHIP"
-        android:textSize="22sp"
+        android:text="ADD SHIP"
+        android:textSize="20sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
@@ -108,7 +108,7 @@
         android:background="@drawable/button_rectangle"
         android:fontFamily="@font/san_francisco"
         android:text="AVAILABILITY"
-        android:textSize="24sp"
+        android:textSize="22sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.498"
