--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -14,7 +14,8 @@
         <ImageView
             android:layout_width="180dp"
             android:layout_height="180dp"
-            android:src="@drawable/kvazilogo">
+            android:src="@drawable/kvazilogo"
+            >
         </ImageView>
 
         <EditText
