finese oko datuma, dodan log_out i 'ok' na successu, dodan i prenesen br putnika

--- a/app/src/main/res/layout/fragment_home_screen.xml
+++ b/app/src/main/res/layout/fragment_home_screen.xml
@@ -10,12 +10,30 @@
     tools:context=".ui.HomeScreenFragment">
 
     <TextView
+        android:id="@+id/to2"
+        android:layout_width="140dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="160dp"
+        android:fontFamily="@font/san_francisco"
+        android:gravity="center"
+        android:maxLines="2"
+        android:text="number of passengers"
+        android:textAllCaps="true"
+        android:textColor="#0B0909"
+        android:textSize="24sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.078"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/from" />
+
+    <TextView
         android:id="@+id/chooseDate"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
         android:fontFamily="@font/san_francisco"
-        android:text="SELECT DATE"
+        android:text="select date"
+        android:textAllCaps="true"
         android:textStyle="bold"
         android:textColor="#0B0000"
         android:textSize="36sp"
@@ -60,7 +78,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:fontFamily="@font/san_francisco"
-        android:text="FROM"
+        android:text="from"
+        android:textAllCaps="true"
         android:textColor="#0B0909"
         android:textSize="26sp"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -75,7 +94,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:fontFamily="@font/san_francisco"
-        android:text="TO"
+        android:text="to"
+        android:textAllCaps="true"
         android:textColor="#0B0909"
         android:textSize="26sp"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -85,11 +105,12 @@
         app:layout_constraintTop_toBottomOf="@+id/from"
         app:layout_constraintVertical_bias="0.139" />
 
+
     <Button
         android:id="@+id/ship"
         android:layout_width="155dp"
         android:layout_height="55dp"
-        android:layout_marginBottom="256dp"
+        android:layout_marginBottom="156dp"
         android:background="@drawable/button_rectangle"
         android:fontFamily="@font/san_francisco"
         android:text="SHIP"
@@ -97,7 +118,6 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
-
 
     <ImageButton
         android:id="@+id/profile"
@@ -114,5 +134,25 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.0" />
+
+    <EditText
+        android:id="@+id/passengers"
+        android:layout_width="100dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="64dp"
+        android:ems="10"
+        android:gravity="center"
+        android:background="@drawable/date_button"
+        android:inputType="number"
+        android:textColor="@color/black"
+        android:textColorHint="@color/black"
+        android:textSize="20dp"
+        android:padding="7dp"
+        android:hint="0"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.72"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/dateOfDeparture" />
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
