Kompletna mapa, bez novih slika za pinove.

--- a/app/src/main/res/navigation/root_navigation_graph.xml
+++ b/app/src/main/res/navigation/root_navigation_graph.xml
@@ -143,6 +143,7 @@
         android:id="@+id/successFragment"
         android:name="com.profico.smartmarina.ui.SuccessFragment"
         android:label="fragment_success"
-        tools:layout="@layout/fragment_success" />
+        tools:layout="@layout/fragment_success" >
+    </fragment>
 
 </navigation>
