--- a/app/src/main/res/layout/fragment_map.xml
+++ b/app/src/main/res/layout/fragment_map.xml
@@ -11,31 +11,188 @@
 
     <!-- TODO: Update blank fragment layout -->
 
+    <fragment
+        android:id="@+id/map"
+        android:name="com.google.android.gms.maps.SupportMapFragment"
+        android:layout_width="match_parent"
+        android:layout_height="400dp"
+        android:layout_marginTop="20dp"
+        app:layout_constraintTop_toBottomOf="@+id/availableDocks"
+        tools:layout_editor_absoluteX="0dp" />
+
+    <View
+        android:id="@+id/bottomLine"
+        android:layout_width="match_parent"
+        android:layout_height="4dp"
+        android:background="@color/blue"
+        app:layout_constraintTop_toBottomOf="@+id/map"
+        tools:layout_editor_absoluteX="-28dp" />
+
+    <View
+        android:id="@+id/topLine"
+        android:layout_width="match_parent"
+        android:layout_height="4dp"
+        android:background="@color/blue"
+        app:layout_constraintBottom_toTopOf="@id/map"/>
+
     <TextView
         android:id="@+id/availableDocks"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginTop="16dp"
         android:fontFamily="@font/san_francisco"
         android:text="Available docks"
         android:textAllCaps="true"
         android:textColor="@color/blue"
-        android:textSize="35sp"
+        android:textSize="33sp"
         android:textStyle="bold"
-        app:layout_constraintBottom_toTopOf="@+id/imageView3"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
-    <ImageView
-        android:id="@+id/imageView3"
-        android:layout_width="250dp"
-        android:layout_height="250dp"
-        android:layout_marginTop="136dp"
-        android:src="@drawable/google_map"
-        app:layout_constraintBottom_toTopOf="@+id/map_button"
+    <TextView
+        android:id="@+id/numberDock"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="16dp"
+        android:fontFamily="@font/san_francisco"
+        android:text="1"
+        android:textColor="@color/blue"
+        android:textSize="35sp"
+        android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.286"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toBottomOf="@+id/map" />
+
+    <TextView
+        android:id="@+id/dockNaming"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="28dp"
+        android:layout_marginStart="28dp"
+        android:layout_marginEnd="24dp"
+        android:fontFamily="@font/san_francisco"
+        android:text="Dock:"
+        android:textColor="@color/blue"
+        android:textSize="25sp"
+        android:textStyle="bold"
+        app:layout_constraintEnd_toStartOf="@+id/numberDock"
+        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/map" />
+
+    <TextView
+        android:id="@+id/priceDock"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="16dp"
+        android:fontFamily="@font/san_francisco"
+        android:text="500"
+        android:textColor="@color/blue"
+        android:textSize="35sp"
+        android:textStyle="bold"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.78"
+        app:layout_constraintStart_toEndOf="@+id/numberDock"
+        app:layout_constraintTop_toBottomOf="@+id/map" />
+
+    <TextView
+        android:id="@+id/dolars"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="16dp"
+        android:fontFamily="@font/san_francisco"
+        android:text="$"
+        android:textStyle="bold"
+        android:textColor="@color/blue"
+        android:textSize="35sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toEndOf="@+id/priceDock"
+        app:layout_constraintTop_toBottomOf="@+id/map" />
+
+    <TextView
+        android:id="@+id/berthType"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="28dp"
+        android:fontFamily="@font/san_francisco"
+        android:text="Berth type:"
+        android:textColor="@color/blue"
+        android:textSize="23sp"
+        android:textStyle="bold"
+        app:layout_constraintBottom_toTopOf="@+id/dateOfArrivalDock"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/dockNaming"
+        app:layout_constraintVertical_bias="0.586" />
+
+    <TextView
+        android:id="@+id/berthType2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="12dp"
+        android:layout_marginBottom="12dp"
+        android:fontFamily="@font/san_francisco"
+        android:text="Vertical"
+        android:textColor="@color/blue"
+        android:textSize="23sp"
+        app:layout_constraintBottom_toTopOf="@+id/dateOfArrivalDock2"
+        app:layout_constraintStart_toEndOf="@+id/berthType" />
+
+    <TextView
+        android:id="@+id/dateOfArrivalDock"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="28dp"
+        android:layout_marginTop="60dp"
+        android:fontFamily="@font/san_francisco"
+        android:text="Date of arrival:"
+        android:textColor="@color/blue"
+        android:textSize="23sp"
+        android:textStyle="bold"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/numberDock" />
+
+    <TextView
+        android:id="@+id/dateOfArrivalDock2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="152dp"
+        android:layout_marginTop="60dp"
+        android:fontFamily="@font/san_francisco"
+        android:text="22-4-2020"
+        android:textColor="@color/blue"
+        android:textSize="23sp"
+        app:layout_constraintStart_toStartOf="@id/dateOfArrivalDock"
+        app:layout_constraintTop_toBottomOf="@+id/numberDock" />
+
+    <TextView
+        android:id="@+id/dateOfDepartureDock"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="28dp"
+        android:layout_marginTop="12dp"
+        android:fontFamily="@font/san_francisco"
+        android:text="Date of departure:"
+        android:textColor="@color/blue"
+        android:textSize="23sp"
+        android:textStyle="bold"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/dateOfArrivalDock" />
+
+    <TextView
+        android:id="@+id/dateOfDepartureDock2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="24dp"
+        android:layout_marginTop="12dp"
+        android:fontFamily="@font/san_francisco"
+        android:text="22-4-2020"
+        android:textColor="@color/blue"
+        android:textSize="23sp"
+        app:layout_constraintStart_toEndOf="@+id/dateOfDepartureDock"
+        app:layout_constraintTop_toBottomOf="@+id/dateOfArrivalDock2" />
 
     <Button
         android:id="@+id/map_button"
@@ -43,14 +200,14 @@
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
         android:background="@drawable/button_rectangle"
-        android:text="Payment"
         android:fontFamily="@font/san_francisco"
+        android:text="Payment"
         android:textSize="22sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.496"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.808" />
+        app:layout_constraintVertical_bias="0.976" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
