--- a/app/src/main/res/layout/fragment_home_screen.xml
+++ b/app/src/main/res/layout/fragment_home_screen.xml
@@ -16,7 +16,7 @@
         android:layout_marginStart="8dp"
         android:fontFamily="@font/san_francisco"
         android:text="SELECT DATE"
-        android:textColor="#0B0000"
+        android:textColor="@color/blue"
         android:textSize="29sp"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -36,10 +36,10 @@
         android:textColor="#000000"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.855"
+        app:layout_constraintHorizontal_bias="0.847"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/chooseDate"
-        app:layout_constraintVertical_bias="0.019" />
+        app:layout_constraintVertical_bias="0.021" />
 
     <Button
         android:id="@+id/dateOfDeparture"
@@ -61,7 +61,7 @@
         android:layout_height="wrap_content"
         android:fontFamily="@font/san_francisco"
         android:text="From"
-        android:textColor="#0B0909"
+        android:textColor="@color/blue"
         android:textSize="24sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/dateOfArrival"
@@ -72,11 +72,11 @@
 
     <TextView
         android:id="@+id/to"
-        android:layout_width="wrap_content"
+        android:layout_width="26dp"
         android:layout_height="wrap_content"
         android:fontFamily="@font/san_francisco"
         android:text="To"
-        android:textColor="#0B0909"
+        android:textColor="@color/blue"
         android:textSize="24sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/dateOfDeparture"
