--- a/app/src/main/res/layout/fragment_my_reservations.xml
+++ b/app/src/main/res/layout/fragment_my_reservations.xml
@@ -1,26 +1,48 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/white"
-    tools:context=".ui.MyReservationsFragment">
+    android:paddingTop="2dp"
 
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:fontFamily="@font/san_francisco"
-        android:textAllCaps="true"
-        android:textStyle="bold"
-        android:text="My Reservations"
-        android:textColor="@color/blue"
-        android:textSize="30dp"
-        android:layout_marginTop="60dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+    >
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/recyclerReservations"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+
+        android:scrollbars="vertical"
+        tools:listitem="@layout/row_reservation_layout">
+
+    </androidx.recyclerview.widget.RecyclerView>
+
+    <!--    <TextView-->
+<!--        android:id="@+id/textView2"-->
+<!--        android:layout_width="wrap_content"-->
+<!--        android:layout_height="wrap_content"-->
+<!--       android:layout_marginBottom=""-->
+<!--        android:layout_marginStart="153dp"-->
+<!--        android:layout_marginEnd="152dp"-->
+<!--        android:fontFamily="@font/san_francisco"-->
+<!--        android:text="My Reservations"-->
+<!--        android:textColor="@color/blue"-->
+<!--        android:textSize="14sp" />-->
+
+    <!--    <Button-->
+<!--        android:id="@+id/btnAddNewShip"-->
+<!--        android:layout_width="match_parent"-->
+<!--        android:layout_height="wrap_content"-->
+<!--        android:layout_alignParentBottom="true"-->
+<!--        android:layout_above="@+id/recyclerShips"-->
+<!--        android:textColor="@color/white"-->
+<!--        android:background="@color/blue"-->
+<!--        android:textSize="22sp"-->
+<!--        android:padding="15dp"-->
+<!--        android:fontFamily="@font/san_francisco"-->
+
+<!--        -->
+<!--        />-->
+
+</RelativeLayout>
